# django-dinamic-shields

./: .buildinfo  .pyre_configuration  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: bandit.yml  code-quality.yml  codeql-analysis.yml  lizard.yml  pyre.yml  pyt.yml  pytest.yml  release.yml  security.yml  sphinx.yml
_static/: django_dynamic_shields.pth
_static/Babel-2.10.3.dist-info/: RECORD
_static/Django-3.2.13.dist-info/: RECORD
_static/Django-3.2.14.dist-info/: RECORD
_static/Django-3.2.15.dist-info/: RECORD
_static/Flask-2.1.2.dist-info/: RECORD
_static/Flask_Cors-3.0.10.dist-info/: RECORD
_static/Flask_GraphQL-2.0.1.dist-info/: RECORD
_static/GitPython-3.1.27.dist-info/: RECORD
_static/Jinja2-3.1.2.dist-info/: RECORD
_static/MarkupSafe-2.1.1.dist-info/: RECORD
_static/PyYAML-6.0.dist-info/: RECORD
_static/Pygments-2.12.0.dist-info/: RECORD
_static/Rx-1.6.1.dist-info/: RECORD
_static/SQLAlchemy-1.3.24.dist-info/: RECORD
_static/Sphinx-5.0.2.dist-info/: RECORD
_static/Sphinx-5.1.1.dist-info/: RECORD
_static/TestSlide-2.7.0.dist-info/: METADATA  RECORD
_static/Werkzeug-2.1.2.dist-info/: RECORD
_static/alabaster-0.7.12.dist-info/: RECORD
_static/aniso8601-7.0.0.dist-info/: RECORD
_static/asgiref-3.5.2.dist-info/: RECORD
_static/async_generator-1.10.dist-info/: RECORD
_static/attrs-21.4.0.dist-info/: RECORD
_static/backcall-0.2.0.dist-info/: RECORD
_static/bandit-1.7.4.dist-info/: RECORD
_static/black-22.3.0.dist-info/: RECORD
_static/black-22.6.0.dist-info/: RECORD
_static/black-22.8.0.dist-info/: RECORD
_static/certifi-2022.6.15.dist-info/: RECORD
_static/charset_normalizer-2.0.12.dist-info/: RECORD
_static/click-8.1.3.dist-info/: RECORD
_static/click_log-0.4.0.dist-info/: RECORD
docs/: Dockerfile  conf.py  index.rst
tests/: test_ShieldsData.py
(+100 files in other folders)
