[tool.poetry]
name = "django-dynamic-shields"
version = "0.1.0"
description = ""
authors = ["Takashi Uno <euno.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "django_dynamic_shields"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"


[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pyre-check = "^0.9.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"