[tool.poetry]
name = "django-dynamic-shields"
version = "0.1.0"
description = ""
authors = ["Takashi Uno <euno.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "django_dynamic_shields"}]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.2.0"
Django = ">=3.2,<5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
pytest-parallel = "^0.1.1"
fb-sapp = "^0.5.2"
black = "^22.6.0"
pyre-check = "^0.9.15"
bandit = "^1.7.4"
python-taint = "^0.42"
lizard = "^1.17.10"
Sphinx = "^5.0.2"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"